--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
     />
     <script defer src="/bundle.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <div id="app"></div>
