--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
     />
+    <link
+      rel="stylesheet"
+      href='./style.css'
+    />
     <script defer src="/bundle.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
   </head>
